# fourier-svg-rs

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  IMPROVEMENTS.md  README.md  docker-compose.yml  fourier_data.json  test.svg.txt  test_output.html
.claude/: ralph-loop.local.md
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-05-22-fix-compilation-errors.md  2026-05-24-tauri-refactoring-plan.md
docs/superpowers/specs/: 2026-05-24-tauri-refactoring-design.md
fourier-cli/: Cargo.toml
fourier-cli/src/: main.rs
fourier-svg/: Cargo.toml
fourier-svg/src/: lib.rs  path_util.rs  processor.rs
fourier-svg/src/visualizer/: export_visualizer.rs  gif_visualizer.rs  html_visualizer.rs  mod.rs
gpui/: README.md
gpui-app/: Cargo.toml
gpui-app/src/: drawing.rs  main.rs
gpui/fourier-svg/src/: path_util.rs
gpui/gpui-app/src/: main.rs
gpui/tauri-app/: Cargo.toml
src/: fft_drawer.rs  lib.rs  main.rs  path_util.rs
src/visualizer/: export_visualizer.rs  html_visualizer.rs  mod.rs
tauri-app/: Cargo.toml  build.rs  tauri.conf.json
tauri-app/capabilities/: main.json
tauri-app/icons/: icon.icns
tauri-app/src/: main.rs
tauri-app/src/commands/: drawing.rs  export_cmd.rs  files.rs  mod.rs  svg.rs
tauri-app/ui/: app.js  controls.js  drawing.js  export.js  index.html  style.css  visualization.js
