[package]
name = "fourier-svg"
version = "1.0.0"
authors = ["Inoki <veyx.shaw@gmail.com>"]
edition = "2021"
description = "Draw SVG paths using Fourier Transform epicycles"
license = "MIT"
readme = "README.md"
keywords = ["fourier", "svg", "visualization", "animation", "fft"]
categories = ["graphics", "visualization", "multimedia"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustfft = "6.0"
lyon = "0.17"
lyon_path = "0.17"
lyon_svg = "0.17"
clap = "2"
svg = "0.9"
