[package]
name = "fourier-svg"
version = "1.0.0"
authors = ["Inoki <veyx.shaw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustfft = "6.0"
lyon = "0.17"
lyon_path = "0.17"
lyon_svg = "0.17"
clap = { version = "4", features = ["derive"] }
svg = "0.9"

# Serialization (needed for data export)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# GIF encoder
gif = "0.13"
image = "0.24"

# Tauri dependencies (only for tauri-app binary)
tauri = { version = "2", optional = true }

# gpui dependencies (only for gpui-app binary)
gpui = { git = "https://github.com/zed-industries/zed", branch = "main", optional = true }
raw-window-handle = { version = "0.6", optional = true }

[features]
default = []
tauri-app = ["tauri"]
gpui-app = ["gpui", "raw-window-handle"]
