[workspace]
members = [
    "fourier-svg",
    "fourier-cli",
    "gpui-app",
    "tauri-app",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
authors = ["Inoki <veyx.shaw@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/inoki/fourier-svg-rs"

[workspace.dependencies]
rustfft = "6.0"
lyon = "0.17"
lyon_path = "0.17"
lyon_svg = "0.17"
svg = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
gif = "0.12"
