[package]
name = "fourier-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for drawing SVG paths using Fourier Transform"

[[bin]]
name = "fourier-svg"
path = "src/main.rs"

[dependencies]
fourier-svg = { path = "../fourier-svg" }
clap = { workspace = true }
svg = { workspace = true }
