[package]
name = "gpui-app"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for Fourier SVG visualization with coefficient display"

[[bin]]
name = "gpui-app"
path = "src/main.rs"

[dependencies]
fourier-svg = { path = "../fourier-svg" }
clap = { workspace = true }
svg = { workspace = true }
