[package]
name = "tauri-app"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tauri application for Fourier SVG visualization with interactive drawing"

[[bin]]
name = "tauri-app"
path = "src/main.rs"

[dependencies]
fourier-svg = { path = "../fourier-svg" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
svg = { workspace = true }

[dependencies.tauri]
version = "2"
optional = true

[dependencies.tauri-plugin-fs]
version = "2"
optional = true

[dependencies.tauri-plugin-dialog]
version = "2"
optional = true

[features]
default = []
tauri = ["dep:tauri", "dep:tauri-plugin-fs", "dep:tauri-plugin-dialog"]
